style:background fix

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -121,10 +121,10 @@ body {
   --btnbgapprove: #079455;
   --btnbgreject: #d92d20;
   --red: red;
-  --webback: #f7f7f8;
+  --webback: #FFFFFF;
   --webprimary: #f57f17;
   --websecondary: #1f2026f2;
-  --weblight: #FFF4E5;
+  --weblight: #FFFFFF;
   --webgrey: #f9f9f9;
 }
 
